---
source: src/lib/codegen/templates.rs
expression: "root_cargo_toml(project_ids.clone(), true, true)"
---
[workspace]
members = ["canisters/sample_snapshot", "logics/sample_snapshot", "canisters/sample_lens", "logics/sample_lens", "canisters/sample_relayer", "logics/sample_relayer", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "^0.10.4"
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-stable-structures = "0.6.4"
serde = "1.0.163"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
hex = "0.4.3"
async-trait = "0.1.83"

ic-web3-rs = "0.1.11"
ic-solidity-bindgen = "0.1.21"
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev= "23e2a6f57f5a247560e033b3fac5af2a16c90015" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev= "23e2a6f57f5a247560e033b3fac5af2a16c90015" }
